--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "odin1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jamesbakersmith01.github.io/Odin1/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
